<resources>
    <string name="app_name">Tera</string>
    <string name="tera_version_info">版本: %s</string>
    <string name="require_read_external_storage_permission">讀取檔案清單需啟用 "儲存" 權限。</string>
    <string name="require_write_external_storage_permission">產生日誌需啟用 "儲存" 權限。</string>
    <string name="require_read_phone_state_permission">讀取 IMEI 值需啟用 "電話" 權限。</string>
    <string name="go">前往</string>
    <string name="update">更新</string>
    <string name="activate_alert_dialog_message">網路連線失敗，請檢查網路狀態或稍候再重試。</string>
    <string name="processing_msg">處理中，請稍候&#8230;</string>
    <string name="activate_signin_google_account_failed">Google 帳號認證失敗</string>
    <string name="activate_hint_username">使用者名稱</string>
    <string name="activate_hint_password">密碼</string>
    <string name="activate_hint_code">啟動碼</string>
    <string name="activate_enable">啟動</string>
    <string name="activate_forget_password"><u>忘記密碼</u></string>
    <string name="activate_or">或</string>
    <string name="activate_with_code_msg">此啟動碼已被使用過。如果您的舊Tera裝置已經遺失或損壞，請先在 %s 將該裝置上鎖，然後再嘗試啟動。</string>
    <string name="activate_with_google_account">使用下列選項啟用</string>
    <string name="activate_get_server_client_id_failed">無法從管理伺服器取得 Google 認證所需的資訊。</string>
    <string name="activate_require_username_password">請輸入使用者名稱及密碼。</string>
    <string name="activate_without_google_play_services">這必須在 Google Play 服務上執行，但您的手機無法找到此服務。</string>
    <string name="activate_update_google_play_services_required">您必須更新 Google Play 服務才能執行 Tera。</string>
    <string name="activate_update_google_play_services_go">更新您的 Google Play 服務。</string>
    <string name="activate_update_google_play_service_missing_permission">Google Play 服務權限遺失。</string>
    <string name="activate_require_activation_code">請輸入啟動碼。</string>
    <string name="activate_incorrect_activation_code">啟動碼不正確。</string>
    <string name="activate_auth_failed">帳戶認證失敗。</string>
    <string name="activate_failed">啟動失敗。</string>
    <string name="activate_failed_device_in_use">此裝置已經被註冊，啟動失敗。</string>
    <string name="activate_failed_not_supported_device">不支援此裝置，啟動失敗。</string>
    <string name="activate_failed_device_expired">Tera 已逾期，啟動失敗。</string>
    <string name="activate_failed_gateway_timeout">閘道器逾時：此伺服器乃作為閘道器或者代理伺服器並且嘗試執行請求時，未能從上游伺服器及時收到回應。</string>
    <string name="activate_device_not_registered">此裝置尚未啟動 Tera，請輸入啟動碼以啟動 Tera。</string>
    <string name="activate_require_read_phone_state_permission">開啟 "電話" 權限以啟動 Tera。</string>
    <string name="access_cloud_settings_title">Access Cloud Settings</string>
    <string name="access_cloud_settings_message">Please choose available Wi-Fi connection or turn off "Sync" section in Tera settings to access cloud.</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_overview">總覽</string>
    <string name="nav_apps">應用程式</string>
    <string name="nav_files">檔案</string>
    <string name="nav_sdcard1">SD 卡</string>
    <string name="nav_add_mountpoint">新增共用空間</string>
    <string name="nav_settings">設定</string>
    <string name="nav_booster">BOOSTER</string>
    <string name="nav_about">關於</string>
    <string name="nav_help">幫助</string>
    <string name="user_info_current_account">目前帳戶:</string>
    <string name="user_info_change_account_button">更改帳戶</string>
    <string name="notify_cloud_connected">雲端連線已恢復</string>
    <string name="notify_cloud_disconnected">雲端連線中斷，請檢查。</string>
    <string name="notify_upload_completed">本地端資料已上傳至雲端空間。</string>
    <string name="notify_pin_app_failure">釘選應用程式失敗，因為可用釘選空間不足。請取消釘選一些應用程式。</string>
    <string name="notify_pin_file_dir_failure">釘選檔案失敗，因為可用釘選空間不足。請取消釘選一些檔案。</string>
    <string name="notify_pin_image_failure">釘選圖片失敗。</string>
    <string name="notify_pin_video_failure">釘選影片失敗。</string>
    <string name="notify_pin_audio_failure">釘選音樂失敗。</string>
    <string name="notify_unpin_app_failure">取消釘選應用程式失敗。</string>
    <string name="notify_unpin_file_dir_failure">取消釘選檔案失敗。</string>
    <string name="notify_unpin_image_failure">取消釘選圖片失敗。</string>
    <string name="notify_unpin_video_failure">取消釘選影片失敗。</string>
    <string name="notify_unpin_audio_failure">取消釘選音樂失敗。</string>
    <string name="notify_exceed_local_storage_used_ratio">本地空間使用率已經達到%s%%。為了避免用完剩餘的空間，請確認網際網路連接正常或取消釘選一些應用程式/檔案。</string>
    <string name="notify_exceed_pin_used_ratio">釘選空間的使用率已經達到%d%%。為了避免用完所剩空間，請注意您要新增釘選的應用程式/檔案的大小或取消釘選一些應用程式/檔案。</string>
    <string name="notify_exceed_pin_max">已釘選空間不足</string>
    <string name="notify_pin_unpin_system_app_failed">釘選系統應用程式失敗。</string>
    <string name="active_cloud_storage_auth_fail">帳戶驗證失敗。</string>
    <string name="overview_hcfs_conn_status_normal">連線正常</string>
    <string name="overview_hcfs_conn_status_not_allowed">未連接雲端</string>
    <string name="overview_hcfs_conn_status_reconnecting">重新連線中</string>
    <string name="overview_hcfs_conn_status_failed">傳輸中斷</string>
    <string name="overview_hcfs_conn_status_slow">傳輸緩慢</string>
    <string name="overview_hcfs_conn_status_in_progress">傳輸中</string>
    <string name="overview_physical_space">實體空間</string>
    <string name="overview_system_space">系統空間</string>
    <string name="overview_cache_space">快取空間</string>
    <string name="overview_cloud_space">雲端空間</string>
    <string name="overview_space_usage_title">空間使用量</string>
    <string name="overview_used_space">已使用空間</string>
    <string name="overview_local_storage">本地空間</string>
    <string name="overview_pinned_storage">已釘選空間</string>
    <string name="overview_network_traffic_title">資料傳輸量</string>
    <string name="overview_data_transmission_today">本日已傳輸資料量</string>
    <string name="overview_data_wait_to_uploaded">待上傳資料</string>
    <string name="overview_snackbar_exit_app">再按一次返回鍵以離開應用程式。</string>
    <string name="action_settings">設定</string>
    <string name="app_file_hint_no_files">這個資料夾是空的</string>
    <string name="app_file_hint_no_apps">未安裝任何應用程式</string>
    <string name="app_file_snackbar_refresh">重新整理</string>
    <string name="app_file_snackbar_unknown_type_file">沒有可開啟此檔案類型的應用程式。</string>
    <string name="app_file_spinner_apps">依應用程式顯示</string>
    <string name="app_file_spinner_data_type">依資料型態顯示</string>
    <string name="app_file_spinner_files">依檔案顯示</string>
    <string name="app_file_spinner_sort_by_name">Sort by name</string>
    <string name="app_file_spinner_sort_by_installed_time">Sort by installed time</string>
    <string name="app_file_spinner_sort_by_modified_time">Sort by modified time</string>
    <string name="app_file_spinner_sort_by_size">Sort by size</string>
    <string name="app_file_list_data_type_image">圖片</string>
    <string name="app_file_list_data_type_video">影片</string>
    <string name="app_file_list_data_type_audio">音樂</string>
    <string name="app_file_menu_list">清單</string>
    <string name="app_file_menu_grid">圖示</string>
    <string name="app_file_whether_allowed_to_unpin_image">圖片資料型態已釘選，是否仍要取消釘選？</string>
    <string name="app_file_whether_allowed_to_unpin_video">影片資料型態已釘選，是否仍要取消釘選？</string>
    <string name="app_file_whether_allowed_to_unpin_audio">音樂資料型態已釘選，是否仍要取消釘選？</string>
    <string name="app_file_internal_storage_name">儲存空間</string>
    <string name="app_file_sdcard1_storage_name">SD 卡儲存空間</string>
    <string name="app_file_section_item_calculating">計算中&#8230;</string>
    <string name="app_file_section_item_total_storage_space">總空間:&#160;</string>
    <string name="app_file_section_item_available_storage_space">可用空間:&#160;</string>
    <string name="app_file_section_item_internal_storage_space">本地空間:&#160;</string>
    <string name="app_file_section_item_all_apps">All Apps</string>
    <string name="app_file_section_item_all_pinned_apps">Pinned Apps</string>
    <string name="app_file_section_item_all_files">All Files</string>
    <string name="app_file_section_item_all_pinned_files">Pinned Files</string>
    <string name="app_file_alert_dialog_title">提示</string>
    <string name="app_file_alert_dialog_message_pin_datatype">之後新增的檔案將自動被釘選，是否也同時釘選現存的檔案？</string>
    <string name="app_file_alert_dialog_message_unpin_datatype">之後新增的檔案將自動被取消釘選，是否也同時取消釘選現存的檔案？</string>
    <string name="app_file_date_since_pinned">自 %1$s 開始釘選</string>
    <string name="app_file_cannot_unpin_files_in_android_folder">Android 目錄下的檔案不可取消釘選</string>
    <string name="app_file_cannot_unpin_apps">Cannot unpin this app due to something error. Please try again later.</string>
    <string name="app_file_popup_menu_pin">釘選</string>
    <string name="app_file_popup_menu_unpin">取消釘選</string>
    <string name="app_file_popup_menu_app_type_more_info">更多資訊</string>
    <string name="app_file_dialog_app_version">版本: %s</string>
    <string name="app_file_dialog_data_size">大小: %s</string>
    <string name="app_file_dialog_app_package_name">套件名稱: %s</string>
    <string name="app_file_dialog_local_data_ratio">本地資料比例: %s</string>
    <string name="app_file_dialog_app_open">開啟</string>
    <string name="app_file_dialog_app_remove">解除安裝</string>
    <string name="app_file_dialog_app_cancel">取消</string>
    <string name="app_file_dialog_calculating">計算中&#8230;</string>
    <string name="app_dialog_unavailable">無法執行程式。請檢查您的 Wi-Fi 連線是否正常，或者請您停用位於 \"同步\" 設定中的 \"只有連接 Wi-Fi 時才存取雲端\" 的選項並使用您的行動資費方案。</string>
    <string name="settings_title_bar">一般設定</string>
    <string name="settings_synchronization">同步</string>
    <string name="settings_sync_wifi_only">只有連接 Wi-Fi 時才存取雲端</string>
    <string name="settings_notification">通知</string>
    <string name="settings_notify_conn_failed_recovery">中斷/恢復連線</string>
    <string name="settings_notify_local_storage_used_ratio_title">本地空間使用率</string>
    <string name="settings_change_account_title">更改帳戶</string>
    <string name="settings_local_storage_used_ratio">本地空間使用率達 <b>%s</b> 時傳送通知。</string>
    <string name="settings_transfer_content">轉移資料</string>
    <string name="settings_transfer_content_desc_title">轉移資料</string>
    <string name="settings_transfer_content_desc_hint">轉移資料會把資料從目前裝置轉移到 Tera 雲端以供另一台裝置使用。一旦資料移轉完成並且另一台裝置開始從 Tera 雲端復原資料，目前裝置將會自動回復到原廠初始狀態。</string>
    <string name="settings_transfer_content_desc_check">我了解上述資訊並同意執行相關動作。</string>
    <string name="settings_transfer_content_confirm_title">確認密碼</string>
    <string name="settings_transfer_content_confirm_message">確認您的 Google 帳戶密碼:</string>
    <string name="settings_transfer_content_confirm_error_message">密碼錯誤，請重試。</string>
    <string name="settings_transfer_content_syc_data_stopped_title">Sync Data Stopped</string>
    <string name="settings_transfer_content_syc_data_stopped_message">This action cannot be executed because sync data is set to Wi-Fi only mode. Please tap "Sync Settings" to turn off Wi-Fi only or connect to available Wi-Fi network to continue.</string>
    <string name="settings_transfer_content_do_not_ask_again">Do not ask me again.</string>
    <string name="settings_feedback">意見回饋</string>
    <string name="help_title_bar">說明中心</string>
    <string name="help_faq_title">常見問題與解答</string>
    <string name="help_user_manual_title">使用手冊</string>
    <string name="help_customer_center_title">客戶服務</string>
    <string name="help_email_feedback_title">意見回饋</string>
    <string name="booster_disable_dialog_title">Disable Boost Zone</string>
    <string name="booster_disable_dialog_content_message">Disable boost zone will unboost any boosted apps. Do you want to continue?</string>
    <string name="booster_disable_dialog_check_message">@string/settings_transfer_content_desc_check</string>
    <string name="quick_tour_title">Quick Tour</string>
    <string name="activate_swift_hint_ip">伺服器位置</string>
    <string name="activate_swift_hint_account">帳號</string>
    <string name="activate_swift_hint_key">密鑰</string>
    <string name="layout_title_swift_info">Swift 帳號資訊</string>
    <string name="activate_swift_hint_port">埠</string>
</resources>