<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.hopebaytech.hcfsmgmt.customview.FontTextView
        style="@style/F4"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/M3"
        android:layout_height="wrap_content"
        android:text="@string/settings_transfer_content_syc_data_stopped_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <com.hopebaytech.hcfsmgmt.customview.FontTextView
        android:id="@+id/hint_message"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/M3"
        android:layout_height="wrap_content"
        android:text="@string/settings_transfer_content_syc_data_stopped_message"
        android:textColor="@android:color/black" />

    <CheckBox
        android:id="@+id/ask_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/C5"
        android:layout_margin="@dimen/M6"
        android:text="@string/settings_transfer_content_do_not_ask_again" />

</LinearLayout>