<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_title_bar_height"
        android:background="@color/colorAccent"
        android:paddingBottom="@dimen/fragment_title_bar_padding_bottom"
        android:paddingLeft="@dimen/fragment_title_bar_padding_left"
        android:paddingRight="@dimen/fragment_title_bar_padding_right"
        android:paddingTop="@dimen/fragment_title_bar_padding_top">

        <com.hopebaytech.hcfsmgmt.customview.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/settings_title_bar"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/M2"
        android:layout_marginStart="@dimen/M2"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.hopebaytech.hcfsmgmt.customview.FontTextView
                    style="@style/F4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_synchronization" />

                <com.hopebaytech.hcfsmgmt.customview.FontTextView
                    style="@style/F6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_sync_wifi_only" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/sync_wifi_only"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:button="@drawable/toggle_btn_background" />

        </RelativeLayout>

        <View style="@style/Divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.hopebaytech.hcfsmgmt.customview.FontTextView
                    style="@style/F4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_notification" />

                <com.hopebaytech.hcfsmgmt.customview.FontTextView
                    style="@style/F6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_notify_conn_failed_recovery" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/notify_conn_failed_recovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:button="@drawable/toggle_btn_background" />

        </RelativeLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:id="@+id/notify_local_storage_used_ratio"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.hopebaytech.hcfsmgmt.customview.FontTextView
                style="@style/F6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_notify_local_storage_used_ratio_title" />

            <com.hopebaytech.hcfsmgmt.customview.FontTextView
                android:id="@+id/notify_local_storage_used_ratio_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_local_storage_used_ratio"
                android:textColor="@color/C5"
                android:textSize="12sp" />
        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:id="@+id/switch_account"
            android:layout_width="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:layout_height="56dp"
            android:gravity="center_vertical">

            <TextView
                style="@style/F6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_change_account_title" />
        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:id="@+id/transfer_content"
            android:layout_width="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:layout_height="56dp"
            android:gravity="center_vertical">

            <TextView
                style="@style/F6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_transfer_content" />
        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:layout_height="56dp"
            android:gravity="center_vertical">

            <TextView
                style="@style/F6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_feedback" />
        </LinearLayout>

        <View style="@style/Divider" />
    </LinearLayout>

</LinearLayout>

