<?xml version="1.0" encoding="utf-8"?>
<!--
-- Copyright (c) 2021 HopeBayTech.
--
-- This file is part of Tera.
-- See https://github.com/HopeBayMobile for further info.
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--     http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_title_bar_height"
        android:background="@drawable/img_subtitle_bkg"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/fragment_title_bar_padding_bottom"
        android:paddingEnd="@dimen/fragment_title_bar_padding_right"
        android:paddingStart="@dimen/fragment_title_bar_padding_left"
        android:paddingTop="@dimen/fragment_title_bar_padding_top">

        <com.hopebaytech.hcfsmgmt.customview.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/help_title_bar"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/M2"
        android:layout_marginStart="@dimen/M2"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/user_manual"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical">

            <TextView
                style="@style/F6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_user_manual_title" />
        </LinearLayout>

        <View style="@style/HorizontalDivider" />

        <LinearLayout
            android:id="@+id/faq"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical">

            <TextView
                style="@style/F6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_faq_title" />
        </LinearLayout>

        <View style="@style/HorizontalDivider" />

        <LinearLayout
            android:id="@+id/quick_tour"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical">

            <TextView
                style="@style/F6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quick_tour_title" />
        </LinearLayout>

        <View style="@style/HorizontalDivider" />

        <LinearLayout
            android:id="@+id/customer_center"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical">

            <TextView
                style="@style/F6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_customer_center_title" />
        </LinearLayout>

        <View style="@style/HorizontalDivider" />

        <LinearLayout
            android:id="@+id/email_feedback"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical">

            <TextView
                style="@style/F6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_email_feedback_title" />
        </LinearLayout>

        <View style="@style/HorizontalDivider" />

    </LinearLayout>
</LinearLayout>